--- a/컴퓨터보안/2w.md
+++ b/컴퓨터보안/2w.md
@@ -64,3 +64,14 @@
 - Masquerade
     > 특정 권한을 가진 사용자 혹은 관리자 권한을 획득
     
+
+- IPS ( Intursion Prevention System )
+    - 침입방지 시스템: 완벽하기 어려움 -> 침입이 아닌 것도 가끔 간주함
+
+# Security Policy
+- 보안을 강화하면 사용자 편의성 감소
+- 편의성을 증가시키며 보안을 증가하는 방법을 고안 -> 얼굴 인식 시스템 , 지문 인식 등등
+
+# Assurance and Evaulation
+- Assuarnce를 측정하는 Evaluation : Common Criteria (CC) 인증
+    - EAL 레벨 1부터 7까지 , 보통은 3~4 정도를 받음
