--- a/성인병과운동/1128.md
+++ b/성인병과운동/1128.md
@@ -23,3 +23,11 @@
 버피테스트도 좋음
 
 다관절>단관절 운동으로 끝내는게 좋다
+
+
+근육 경직, 마그네슘 풍부 - 바나나
+
+
+알배김,근육통 잇을때 운동? - 스트레칭으로 해소
+미는 동작을 많이하면 근육통이 빨리 나타난데
+48시간 휴식이 좋음
